--- a/Libertas2016Ecommerce/web/lib/less/stylo.less
+++ b/Libertas2016Ecommerce/web/lib/less/stylo.less
@@ -1,7 +1,7 @@
 body{
     font-size: 62.5%;
     font-family: 'Open sans',sans-serif;
-    background-color: #f9f9f9;
+    background-color: #F7F6DF;//#F7F6CF
 
     .titulo{
         h1{
@@ -10,7 +10,6 @@ body{
             border-bottom: 1px solid #000;
             padding-bottom: 10px;
             font-size: 2.4rem;
-            font-weight: bold;
         }
         p{
             font-size: 1.4rem;
@@ -66,7 +65,10 @@ body{
                         }
                     }
                     li:hover{
-                        background-color: purple;
+                        background-color: #F7F6CA;
+                        a{
+                            color: #333;
+                        }
                     }
                 }
             }
@@ -80,15 +82,61 @@ body{
             border-radius: 15px;
         }
     }
-    
+
     .novidades{
         .produtos{
             .grid-slide{
+                //padding: 10px;
+                background-color: #F7F6CA;
+                color: #333;
                 figure{
                     padding: 25px;
                     background-color: #FFF;
+                }
+                h2{
+                    font-family: 'Roboto Condensed', sans-serif;
+                    font-size: 1.9rem;
+                }
+                p{
+                    font-size: 1.6rem;
+                    padding: 10px 30px;
+                    margin-bottom: 0;
+                }
+                .btn-comprar{
+                    padding: 10px;
+                    font-size: 1.5rem;
+                    background-color: #333;
+                    cursor: pointer;
+                    a{
+                        color: #FFF!important;
+                        text-decoration: none;
+                    }
+                    i{
+                        margin-right: 20px;
+                        transition: all 0.1s ease-in-out;
+                        -webkit-transition: all 0.1s ease-in-out;
+                        -moz-transition: all 0.1s ease-in-out;
+                        -o-transition: all 0.1s ease-in-out;
+                        -ms-transition: all 0.1s ease-in-out;
+                    }
+                }
+                .btn-comprar:hover{
+                    i{
+                    -webkit-animation-name: toRight; 
+                    -webkit-animation-duration: 0.5s;
+                    }
                 }
             }
         }
     }
 }
+
+@keyframes toRight {
+    50% {-ms-transform: translate(0); /* IE 9 */
+          -webkit-transform: translate(0); /* Safari */
+          transform: translate(0);}
+    50% {-ms-transform: translate(10px); /* IE 9 */
+        -webkit-transform: translate(10px); /* Safari */
+        transform: translate(10px);}
+}
+
